@@ -235,8 +235,8 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner",
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner|3.1.1",
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1"
 						]
 					}
 				],
@@ -284,8 +284,8 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner",
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner|3.1.1",
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1"
 						]
 					}
 				]
