@@ -812,7 +812,7 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1"
 						]
 					}
 				],
@@ -5994,7 +5994,7 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1"
 						]
 					}
 				],
