@@ -1926,7 +1926,7 @@
 				"binding": {
 					"strength": "extensible",
 					"description": "Two letter USPS alphabetic codes.",
-					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/us-core-usps-state"
+					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/us-core-usps-state|3.1.1"
 				},
 				"mapping": [
 					{
