@@ -1585,7 +1585,7 @@
 					{
 						"code": "Resource",
 						"profile": [
-							"http://hl7.org/fhir/us/davinci-hrex/StructureDefinition/hrex-coverage"
+							"http://hl7.org/fhir/us/davinci-hrex/StructureDefinition/hrex-coverage|3.1.1"
 						]
 					}
 				],
