@@ -451,7 +451,7 @@
 					{
 						"code": "Extension",
 						"profile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex|3.1.1"
 						]
 					}
 				],
@@ -3466,7 +3466,7 @@
 					{
 						"code": "Extension",
 						"profile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex|3.1.1"
 						]
 					}
 				],
