@@ -446,7 +446,7 @@
 					{
 						"code": "Extension",
 						"profile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-race"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-race|3.1.1"
 						]
 					}
 				],
@@ -497,7 +497,7 @@
 					{
 						"code": "Extension",
 						"profile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-ethnicity|3.1.1"
 						]
 					}
 				],
@@ -549,7 +549,7 @@
 					{
 						"code": "Extension",
 						"profile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-birthsex|3.1.1"
 						]
 					}
 				],
@@ -3232,7 +3232,7 @@
 				"binding": {
 					"strength": "extensible",
 					"description": "Two Letter USPS alphabetic codes.",
-					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/us-core-usps-state"
+					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/us-core-usps-state|3.1.1"
 				},
 				"mapping": [
 					{
@@ -4334,7 +4334,7 @@
 				"isSummary": false,
 				"binding": {
 					"strength": "extensible",
-					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/simple-language"
+					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/simple-language|3.1.1"
 				},
 				"mapping": [
 					{
