@@ -745,7 +745,7 @@
 				"binding": {
 					"strength": "extensible",
 					"description": "Provider role codes consisting of NUCC Health Care Provider Taxonomy Code Set for providers.",
-					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/us-core-provider-role"
+					"valueSet": "http://hl7.org/fhir/us/core/ValueSet/us-core-provider-role|3.1.1"
 				},
 				"mapping": [
 					{
