@@ -1802,8 +1802,8 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization",
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1",
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner|3.1.1"
 						]
 					}
 				],
@@ -1913,8 +1913,8 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization",
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1",
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner|3.1.1"
 						]
 					}
 				],
@@ -4535,8 +4535,8 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization",
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1",
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner|3.1.1"
 						]
 					}
 				],
@@ -4551,8 +4551,8 @@
 					{
 						"code": "Reference",
 						"targetProfile": [
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization",
-							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner"
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-organization|3.1.1",
+							"http://hl7.org/fhir/us/core/StructureDefinition/us-core-practitioner|3.1.1"
 						]
 					}
 				],
