@@ -13,9 +13,11 @@
     - StructureDefinition-hrex-provenance.json
     - StructureDefinition-hrex-practitionerrole.json
     - StructureDefinition-hrex-practitioner.json
+    - StructureDefinition-hrex-patient-demographics.json
     - StructureDefinition-hrex-patient-member.json
     - StructureDefinition-hrex-organization.json
     - StructureDefinition-hrex-parameters-member-match-in.json
+    - StructureDefinition-extension-itemAuthorizedProvider.json
 
     
 # Known Issues
